--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar"></nav>
+        <nav class="navbar">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <section id="home" class="home">
