--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#home"></a></li>
+                <li><a href="#product"></a></li>
+                <li><a href="#price"></a></li>
+                <li><a href="#contact"></a></li>
             </ul>
         </nav>
     </header>
