Add id and classes to the main sections in index.html

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <h1></h1>
             <p></p>
         </section>
-        <section>
+        <section id="product" class="product">
             <h1></h1>
             <p></p>
         </section>
-        <section>
+        <section id="price" class="price">
             <h1></h1>
             <p></p>
         </section>
-        <section>
+        <section id="contact" class="contact">
             <h1></h1>
             <p></p>
         </section>
