Change names of main sections if

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="#home"></a></li>
-                <li><a href="#product"></a></li>
-                <li><a href="#price"></a></li>
-                <li><a href="#contact"></a></li>
+                <li><a href="#home">home</a></li>
+                <li><a href="#gallery">gallery</a></li>
+                <li><a href="#offer"></a>offer</li>
+                <li><a href="#contact"></a>contact</li>
             </ul>
         </nav>
     </header>
@@ -22,11 +22,11 @@
             <h1></h1>
             <p></p>
         </section>
-        <section id="product" class="product">
+        <section id="gallery" class="gallery">
             <h1></h1>
             <p></p>
         </section>
-        <section id="price" class="price">
+        <section id="offer" class="offer">
             <h1></h1>
             <p></p>
         </section>
