--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#gallery">gallery</a></li>
-                <li><a href="#offer"></a>offer</li>
-                <li><a href="#contact"></a>contact</li>
+                <li><a href="#offer">offer</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
