Add content to the first page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     </header>
     <div class="container">
         <section id="home" class="home">
-            <h1></h1>
-            <p></p>
+            <div class="home_content">
+                <h1>caliburn G</h1>
+                <p>taste, style, comfort</p>
+            </div>
+
         </section>
         <section id="gallery" class="gallery">
             <h1></h1>
