Style first page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container">
         <section id="home" class="home">
             <div class="home_content">
-                <h1>caliburn G</h1>
-                <p>taste, style, comfort</p>
+                <h1 class="home_content-title">caliburn G</h1>
+                <p class="home_content-paragraph">taste, style, comfort</p>
             </div>
 
         </section>
