--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <p></p>
         </section>
     </div>
+
+    <!--Script link-->
+    <script src="script.js"></script>
     
 </body>
 </html>
