--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!--Script link-->
     <script src="script.js"></script>
+    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
     
 </body>
 </html>
