--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vape caliburn G pod</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar">
+
+            <!--Hamburger Menu element 1-->
+
+            <input type="checkbox" id="nav-toggle" class="nav-toggle" />
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#gallery">gallery</a></li>
                 <li><a href="#offer">offer</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
+
+            <!--Hamburger Menu element 2-->
+
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
         </nav>
     </header>
     <div class="container">
         <section id="home" class="home">
             <div class="home_content">
                 <h1 class="home_content-title">caliburn G</h1>
-                <p class="home_content-paragraph">taste, style, comfort</p>
+                <p class="home_content-paragraph">
+                    taste, style, comfort
+                </p>
             </div>
-
         </section>
         <section id="gallery" class="gallery">
             <h1></h1>
@@ -36,13 +49,11 @@
         </section>
         <section id="contact" class="contact">
             <h1></h1>
-            <p></p>
         </section>
     </div>
 
     <!--Script link-->
     <script src="script.js"></script>
-    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
-    
 </body>
+
 </html>
