--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <!--Hamburger Menu element 2-->
 
-            <label for="nav-toggle" class="nav-toggle-label">
+            <label for="nav-toggle" class="nav-toggle-label" id="nav-toggle-label">
                 <span></span>
             </label>
         </nav>
