--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <header>
         <nav class="navbar">
 
-            <!--Hamburger Menu element 1-->
-
-            <input type="checkbox" id="nav-toggle" class="nav-toggle" />
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#gallery">gallery</a></li>
@@ -23,11 +20,11 @@
                 <li><a href="#contact">contact</a></li>
             </ul>
 
-            <!--Hamburger Menu element 2-->
-
-            <label for="nav-toggle" class="nav-toggle-label" id="nav-toggle-label">
-                <span></span>
-            </label>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header>
     <div class="container">
