Add fanction to trigger hamburger and add active class on this element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#contact">contact</a></li>
             </ul>
 
-            <div class="hamburger">
+            <div id="hamburger" class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
