--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav class="navbar">
+        <nav id="navbar" class="navbar">
 
             <ul>
                 <li><a href="#home">home</a></li>
