--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav id="navbar" class="navbar">
 
             <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#gallery">gallery</a></li>
-                <li><a href="#offer">offer</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#home" id='nav-link'>home</a></li>
+                <li><a href="#gallery" id='nav-link'>gallery</a></li>
+                <li><a href="#offer" id='nav-link'>offer</a></li>
+                <li><a href="#contact" id='nav-link'>contact</a></li>
             </ul>
 
             <div id="hamburger" class="hamburger">
