Add core structure to the second section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,30 @@
 
         </section>
         <section id="gallery" class="gallery">
-            <h1></h1>
-            <p></p>
+            <div class="carousel">
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__item">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel__actions">
+                    <button id="carousel__button--prev"></button>
+                    <button id="carousel__button--next"></button>
+                </div>
+            </div>
         </section>
         <section id="offer" class="offer">
             <h1></h1>
