Add script for font awesome icons

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                     <img src="" alt="">
                 </div>
                 <div class="carousel__actions">
-                    <button id="carousel__button--prev"></button>
-                    <button id="carousel__button--next"></button>
+                    <button id="carousel__button--prev" aria-label="Previous slide">
+                        < </button>
+                            <button id="carousel__button--next" aria-label="Next slide">></button>
                 </div>
             </div>
         </section>
@@ -71,7 +72,9 @@
             <h1></h1>
         </section>
     </div>
+    <!--Font Awesome Script-->
 
+    <script src="https://kit.fontawesome.com/9237ee6e28.js" crossorigin="anonymous"></script>
     <!--Script link-->
     <script src="script.js"></script>
 </body>
