Add icons for sliding carousel

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </section>
         <section id="gallery" class="gallery">
             <div class="carousel">
+                <button id="carousel__button--prev" aria-label="Previous slide">
+                    <i class="fas fa-arrow-left"></i> </button>
                 <div class="carousel__item">
                     <img src="" alt="">
                 </div>
@@ -58,9 +60,9 @@
                     <img src="" alt="">
                 </div>
                 <div class="carousel__actions">
-                    <button id="carousel__button--prev" aria-label="Previous slide">
-                        < </button>
-                            <button id="carousel__button--next" aria-label="Next slide">></button>
+
+                    <button id="carousel__button--next" aria-label="Next slide"><i
+                            class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
         </section>
