--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 <button id="carousel__button--prev" aria-label="Previous slide">
                     <i class="fas fa-arrow-left"></i> </button>
                 <div class="carousel__item">
-                    <img src="" alt="">
+                    <img src="assets/images/collection.webp" alt="Colorful collection of the vapes">
                 </div>
                 <div class="carousel__item">
-                    <img src="" alt="">
+                    <img src="assets/images/blue.webp" alt="Blue vape">
                 </div>
                 <div class="carousel__item">
-                    <img src="" alt="">
+                    <img src="assets/images/black.webp" alt="Black vape">
                 </div>
                 <div class="carousel__item">
-                    <img src="" alt="">
+                    <img src="assets/images/filter.jpg" alt="Filter for the vape">
                 </div>
                 <div class="carousel__item">
                     <img src="" alt="">
