Style gallery block

--- a/index.html
+++ b/index.html
@@ -43,31 +43,30 @@
 
                 <!--https://www.pricepointny.com/products/caliburn-g-pod-system-kit-->
 
-
-                <button id="carousel__button--prev" aria-label="Previous slide">
-                    <i class="fas fa-arrow-left"></i> </button>
-                <div class="carousel__item">
+                <button id="carousel__button--prev" class="carousel__button" aria-label="Previous slide">
+                    <i class="fas fa-arrow-left btn-carousel"></i> </button>
+                <div class="carousel__item carousel__item--visable">
                     <img src="assets/images/collection.webp" alt="Colorful collection of the vapes">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__item carousel__item--hidden">
                     <img src="assets/images/blue.webp" alt="Blue vape">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__item carousel__item--hidden">
                     <img src="assets/images/black.webp" alt="Black vape">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__item carousel__item--hidden">
                     <img src="assets/images/filter.jpg" alt="Filter for the vape">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__item carousel__item--hidden">
                     <img src="" alt="">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__item carousel__item--hidden">
                     <img src="" alt="">
                 </div>
                 <div class="carousel__actions">
 
-                    <button id="carousel__button--next" aria-label="Next slide"><i
-                            class="fas fa-arrow-right"></i></button>
+                    <button id="carousel__button--next" class="carousel__button" aria-label="Next slide"><i
+                            class="fas fa-arrow-right btn-carousel"></i></button>
                 </div>
             </div>
         </section>
