Add animation for the background of the photo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
-                        <li class="carousel__slide">
+                        <li class="carousel__slide rgb">
                             <img class="carousel__images" src="assets/images/collection.webp"
                                 alt="Colorful collection of the vapes">
                         </li>
@@ -66,18 +66,20 @@
                             <img class="carousel__images" src="assets/images/collection.webp"
                                 alt="Colorful collection of the vapes">
                         </li>
+
                     </ul>
+
                 </div>
 
                 <button id="carousel__button--next" class="carousel__button carousel__button--next"
                     aria-label="Next slide"><i class="fas fa-arrow-right btn-carousel"></i></button>
-                <div class="carousel__nav">
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                </div>
 
+            </div>
+            <div class="carousel__nav">
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
             </div>
         </section>
         <section id="offer" class="offer">
