--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
                         <li class="carousel__slide rgb">
-                            <img class="carousel__images" src="assets/images/collection.webp"
+                            <img class="carousel__images" src="assets/images/collection.png"
                                 alt="Colorful collection of the vapes">
                         </li>
                         <li class="carousel__slide">
@@ -73,14 +73,14 @@
 
                 <button id="carousel__button--next" class="carousel__button carousel__button--next"
                     aria-label="Next slide"><i class="fas fa-arrow-right btn-carousel"></i></button>
+                <div class="carousel__nav">
+                    <button class="carousel__indicator"></button>
+                    <button class="carousel__indicator"></button>
+                    <button class="carousel__indicator"></button>
+                    <button class="carousel__indicator"></button>
+                </div>
+            </div>
 
-            </div>
-            <div class="carousel__nav">
-                <button class="carousel__indicator"></button>
-                <button class="carousel__indicator"></button>
-                <button class="carousel__indicator"></button>
-                <button class="carousel__indicator"></button>
-            </div>
         </section>
         <section id="offer" class="offer">
             <h1></h1>
