Fixed bug in css with carousel__nav

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
                         <li class="carousel__slide rgb">
-                            <img class="carousel__images" src="assets/images/collection.png"
+                            <img class="carousel__images" src="assets/images/chiara-summer-3ATyg1Iqw2M-unsplash.jpg"
                                 alt="Colorful collection of the vapes">
                         </li>
-                        <li class="carousel__slide">
+                        <!-- <li class="carousel__slide">
                             <img class="carousel__images" src="assets/images/blue.webp" alt="Blue vape">
                         </li>
                         <li class="carousel__slide">
@@ -65,7 +65,7 @@
                         <li class="carousel__slide">
                             <img class="carousel__images" src="assets/images/collection.webp"
                                 alt="Colorful collection of the vapes">
-                        </li>
+                        </li> -->
 
                     </ul>
 
