Added images for the gallery, top image positioned on top

--- a/index.html
+++ b/index.html
@@ -48,24 +48,31 @@
 
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
-                        <li class="carousel__slide rgb">
-                            <img class="carousel__images" src="assets/images/blond_woman_inhale_while_holding_vape.jpg"
-                                alt="Colorful collection of the vapes">
-                        </li>
-                        <!-- <li class="carousel__slide">
-                            <img class="carousel__images" src="assets/images/blue.webp" alt="Blue vape">
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__images" src="assets/images/black.webp" alt="Black vape">
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__images" src="assets/images/filter.jpg" alt="Filter for the vape">
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__images" src="assets/images/collection.webp"
-                                alt="Colorful collection of the vapes">
-                        </li> -->
+                        <div class="carousel__track--top">
+                            <li class="carousel__slide rgb">
 
+                                <img class="carousel__images carousel__images--visible"
+                                    src="assets/images/blond_woman_inhale_while_holding_vape.jpg"
+                                    alt="Blond girl exhales while holding a vape">
+                            </li>
+                            <li class="carousel__slide">
+                                <img class="carousel__images carousel__images--hidden"
+                                    src="assets/images/man_smocks_vape.jpg" alt="Man smocks vape">
+                            </li>
+                            <li class="carousel__slide">
+                                <img class="carousel__images carousel__images--hidden"
+                                    src="assets/images/girl_enjoys_smocking_vape.jpg" alt="Girl enjoys smocking vape">
+                            </li>
+                            <li class="carousel__slide">
+                                <img class="carousel__images carousel__images--hidden"
+                                    src="assets/images/young_man_smocks_vape_outside.jpg"
+                                    alt="Young man smocks vape outside">
+                            </li>
+                            <li class="carousel__slide">
+                                <img class="carousel__images carousel__images--hidden"
+                                    src="assets/images/man_holds_a_vape.jpg" alt="Man holds a vape while driving">
+                            </li>
+                        </div>
                     </ul>
 
                 </div>
@@ -73,6 +80,7 @@
                 <button id="carousel__button--next" class="carousel__button carousel__button--next"
                     aria-label="Next slide"><i class="fas fa-arrow-right btn-carousel"></i></button>
                 <div class="carousel__nav">
+                    <button class="carousel__indicator"></button>
                     <button class="carousel__indicator"></button>
                     <button class="carousel__indicator"></button>
                     <button class="carousel__indicator"></button>
