Add variables for gallery elements in js

--- a/index.html
+++ b/index.html
@@ -49,28 +49,29 @@
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
                         <div class="carousel__track--top">
-                            <li class="carousel__slide rgb">
 
-                                <img class="carousel__images carousel__images--visible"
+                            <!--Slides for the gallery-->
+
+                            <li class="carousel__slide rgb carousel__images--visible">
+                                <img class="carousel__images "
                                     src="assets/images/blond_woman_inhale_while_holding_vape.jpg"
                                     alt="Blond girl exhales while holding a vape">
                             </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__images carousel__images--hidden"
-                                    src="assets/images/man_smocks_vape.jpg" alt="Man smocks vape">
+                            <li class="carousel__slide rgb carousel__images--hidden">
+                                <img class="carousel__images " src="assets/images/man_smocks_vape.jpg"
+                                    alt="Man smocks vape">
                             </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__images carousel__images--hidden"
-                                    src="assets/images/girl_enjoys_smocking_vape.jpg" alt="Girl enjoys smocking vape">
+                            <li class="carousel__slide rgb carousel__images--hidden">
+                                <img class="carousel__images " src="assets/images/girl_enjoys_smocking_vape.jpg"
+                                    alt="Girl enjoys smocking vape">
                             </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__images carousel__images--hidden"
-                                    src="assets/images/young_man_smocks_vape_outside.jpg"
+                            <li class="carousel__slide rgb carousel__images--hidden">
+                                <img class="carousel__images" src="assets/images/young_man_smocks_vape_outside.jpg"
                                     alt="Young man smocks vape outside">
                             </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__images carousel__images--hidden"
-                                    src="assets/images/man_holds_a_vape.jpg" alt="Man holds a vape while driving">
+                            <li class="carousel__slide rgb carousel__images--hidden">
+                                <img class="carousel__images " src="assets/images/man_holds_a_vape.jpg"
+                                    alt="Man holds a vape while driving">
                             </li>
                         </div>
                     </ul>
