Add classes and stylying for navslider manipulations

--- a/index.html
+++ b/index.html
@@ -81,11 +81,21 @@
                 <button id="carousel__button--next" class="carousel__button carousel__button--next"
                     aria-label="Next slide"><i class="fas fa-arrow-right btn-carousel"></i></button>
                 <div class="carousel__nav">
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
-                    <button class="carousel__indicator"></button>
+                    <div class="carousel__nav--item carousel__nav--active">
+                        <button class="carousel__indicator"></button>
+                    </div>
+                    <div class="carousel__nav--item carousel__nav--disable">
+                        <button class="carousel__indicator"></button>
+                    </div>
+                    <div class="carousel__nav--item carousel__nav--disable">
+                        <button class="carousel__indicator"></button>
+                    </div>
+                    <div class="carousel__nav--item carousel__nav--disable">
+                        <button class="carousel__indicator"></button>
+                    </div>
+                    <div class="carousel__nav--item carousel__nav--disable">
+                        <button class="carousel__indicator"></button>
+                    </div>
                 </div>
             </div>
 
